Colab을 통해 생성됨

--- a/오픈소스_데이터_분석_13강.ipynb
+++ b/오픈소스_데이터_분석_13강.ipynb
@@ -52,11 +52,11 @@
       "execution_count": 1,
       "metadata": {
         "id": "ZGglZIa2Bt0V",
-        "outputId": "c0b5ecda-5a4c-468f-b132-227ea52e0ad4",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
-        }
+        },
+        "outputId": "c0b5ecda-5a4c-468f-b132-227ea52e0ad4"
       },
       "outputs": [
         {
@@ -424,10 +424,10 @@
       "execution_count": 1,
       "metadata": {
         "id": "HVANXVuyxoEG",
-        "outputId": "9e15cae7-db81-41cb-df2b-1d8fa8cb1bd4",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "9e15cae7-db81-41cb-df2b-1d8fa8cb1bd4"
       },
       "outputs": [
         {
@@ -514,10 +514,10 @@
       "execution_count": 2,
       "metadata": {
         "id": "Z3mh7GL7-xuP",
-        "outputId": "f43cad92-783a-4dd6-fce0-0be9adfaa2ff",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "f43cad92-783a-4dd6-fce0-0be9adfaa2ff"
       },
       "outputs": [
         {
@@ -656,11 +656,11 @@
       "execution_count": 4,
       "metadata": {
         "id": "mPATxfmD--q0",
-        "outputId": "4ad1275e-dd79-465a-e772-f7c7ab287673",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 208
-        }
+        },
+        "outputId": "4ad1275e-dd79-465a-e772-f7c7ab287673"
       },
       "outputs": [
         {
@@ -796,11 +796,11 @@
       "execution_count": 5,
       "metadata": {
         "id": "mliCGdpm_ai2",
-        "outputId": "4d7fe7a2-a735-4fef-cc05-ac4fab5888ef",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
-        }
+        },
+        "outputId": "4d7fe7a2-a735-4fef-cc05-ac4fab5888ef"
       },
       "outputs": [
         {
@@ -1059,11 +1059,11 @@
       "execution_count": 7,
       "metadata": {
         "id": "0LmM7yjY_gCt",
-        "outputId": "f6b068a3-b5b8-46d7-b6df-48070bbeebca",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 419
-        }
+        },
+        "outputId": "f6b068a3-b5b8-46d7-b6df-48070bbeebca"
       },
       "outputs": [
         {
@@ -1499,9 +1499,31 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "1bAkMpaA7-KA"
+        "id": "1bAkMpaA7-KA",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "f4786042-fa36-485a-abd3-e4fb73d31032"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Collecting kiwipiepy\n",
+            "  Downloading kiwipiepy-0.22.1.tar.gz (3.8 MB)\n",
+            "\u001b[?25l     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m0.0/3.8 MB\u001b[0m \u001b[31m?\u001b[0m eta \u001b[36m-:--:--\u001b[0m\r\u001b[2K     \u001b[91m━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[91m╸\u001b[0m\u001b[90m━━━━━━━━━━━━\u001b[0m \u001b[32m2.6/3.8 MB\u001b[0m \u001b[31m75.7 MB/s\u001b[0m eta \u001b[36m0:00:01\u001b[0m\r\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m3.8/3.8 MB\u001b[0m \u001b[31m58.4 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[?25h  Preparing metadata (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
+            "Collecting kiwipiepy_model<0.23,>=0.22 (from kiwipiepy)\n",
+            "  Downloading kiwipiepy_model-0.22.0.tar.gz (79.5 MB)\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m79.5/79.5 MB\u001b[0m \u001b[31m9.4 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[?25h  Preparing metadata (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
+            "Requirement already satisfied: numpy in /usr/local/lib/python3.12/dist-packages (from kiwipiepy) (2.0.2)\n",
+            "Requirement already satisfied: tqdm in /usr/local/lib/python3.12/dist-packages (from kiwipiepy) (4.67.1)\n",
+            "Building wheels for collected packages: kiwipiepy, kiwipiepy_model\n"
+          ]
+        }
+      ],
       "source": [
         "## Kiwi 형태소 분석기 설치\n",
         "!pip install kiwipiepy"
@@ -1518,6 +1540,8 @@
         "from kiwipiepy import Kiwi\n",
         "\n",
         "## 형태소 분석기 초기화 및 사용자 사전 추가\n",
+        "## 명사만 가지고 오려고 하는 것이다.\n",
+        "\n",
         "kiwi = Kiwi()\n",
         "kiwi.add_user_word('방송대', 'NNP')\n",
         "\n",
@@ -1557,7 +1581,7 @@
         "       morphemes = []\n",
         "       for token in result[0][0]:\n",
         "            ## 형태소(form)와 품사(tag) 정보를 튜플로 morphemes에 추가\n",
-        "\n",
+        "             morphemes.append((token.form, token.tag))\n",
         "       return morphemes\n",
         "    else:\n",
         "        return []\n",
@@ -1566,7 +1590,7 @@
         "def pos_df(df):\n",
         "  if not df.empty:\n",
         "      # `정제된 제목` 칼럼의 값에 analyze_morphemes 함수를 적용하고 결과를 `행태소 분석 결과` 칼럼에 저장\n",
-        "\n",
+        "      df['형태소 분석 결과'] = df['정제된 제목'].apply(analyze_morphemes)\n",
         "\n",
         "## 형태소 분석 적용\n",
         "pos_df(cs_df)\n",
@@ -1593,7 +1617,7 @@
         "## 형태소 분석 결과에서 명사 추출\n",
         "def extract_nouns(morphemes):\n",
         "  # 형태소가 NNG (일반명사), NNP (고유명사) 인 word를 nouns에 저장\n",
-        "\n",
+        "  nouns = [word for word, tag in morphemes if tag in ['NNG', 'NNP']]\n",
         "  return nouns\n",
         "\n",
         "## 데이터프레임에 명사 추출 적용\n",
@@ -1662,9 +1686,10 @@
         "def get_word_count(df):\n",
         "    if not df.empty:\n",
         "        # 모든 명사의 리스트를 구함\n",
-        "\n",
+        "        all_nouns = df['명사'].sum()\n",
+        "        print(all_nouns)\n",
         "        # 모든 명사들에 대한 Counter 객체(빈도 정보) 를 반환\n",
-        "\n",
+        "        return Counter(all_nouns)\n",
         "\n",
         "## cs_df의 단어 빈도 계산\n",
         "word_count = get_word_count(cs_df)\n",
@@ -1715,7 +1740,7 @@
         "        background_color='white',\n",
         "        colormap='viridis',\n",
         "        font_path='/usr/share/fonts/truetype/nanum/NanumBarunGothic.ttf' ## 한글 폰트 경로 지정\n",
-        "        ).# word_count의 빈도 정보를 이용하여 생성\n",
+        "        ).generate_from_frequencies(word_count)# word_count의 빈도 정보를 이용하여 생성\n",
         "\n",
         "    plt.figure(figsize=(10, 5))\n",
         "    plt.imshow(wordcloud, interpolation='bilinear') ## 이미지 표시\n",
@@ -1802,14 +1827,16 @@
       "outputs": [],
       "source": [
         "from vllm import LLM\n",
+        "## 웹 상의 공개되어있는 gpu에 올려서 사용할 수 있게 도와주는 라이브러리이다.\n",
         "\n",
         "## LLM 모델 로드 및 설정\n",
+        "## 20억 정도로 된 사이즈라는데 gpt는 140억 정도 된다고 보면 됩니다.\n",
         "llm = LLM(\n",
         "    model=\"LGAI-EXAONE/EXAONE-3.5-2.4B-Instruct\",\n",
         "    tensor_parallel_size=1,\n",
         "    dtype=\"half\",\n",
-        "    gpu_memory_utilization=0.6,\n",
-        "    max_model_len=32000\n",
+        "    gpu_memory_utilization=0.6, ## 메모리 사용량은 최대 60%까지만\n",
+        "    max_model_len=32000 ## 최대 3만 2천개의 데이터만 사용하는 것이다.\n",
         ")"
       ]
     },
@@ -1834,7 +1861,7 @@
         "\n",
         "## 샘플링 파라미터 설정\n",
         "sampling_params = SamplingParams(\n",
-        "    temperature=0.3, ## 생성 텍스트의 다양성 조절\n",
+        "    temperature=0.3, ## 생성 텍스트의 다양성 조절 창의적으로 만들어라 정확하게 해라\n",
         "    top_p=1.0, ## top_p 누적 확률 내에서 토큰 샘플링\n",
         "    max_tokens=512, ## 생성될 최대 토큰 수\n",
         "    frequency_penalty=0.5 ## 자주 나타나는 토큰에 대한 패널티\n",
@@ -1844,7 +1871,9 @@
         "    ## 프롬프트 형식화 함수\n",
         "    messages = [\n",
         "        # 시스템 메시지 추가\n",
+        "        {\"role\":\"system\", \"content\": \"You are EXAONE model from LG AI Research, a helpful assistant\"},\n",
         "        # 사용자 메시지 추가\n",
+        "        {\"role\":\"user\",\"content\": user_input}\n",
         "    ]\n",
         "    return messages\n",
         "\n",
@@ -1853,7 +1882,7 @@
         "\n",
         "## LLM을 사용하여 텍스트 생성\n",
         "# chat 함수를 이용 (프롬프트와 샘플링 파라미터)\n",
-        "\n",
+        "outputs = llm.chat(prompt, sampling_params)\n",
         "\n",
         "## 생성된 텍스트 출력\n",
         "print(\"\\n생성된 텍스트:\", outputs[0].outputs[0].text)"
