Colab을 통해 생성됨

--- a/오픈소스_데이터_분석_13강.ipynb
+++ b/오픈소스_데이터_분석_13강.ipynb
@@ -1497,7 +1497,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "id": "1bAkMpaA7-KA",
         "colab": {
@@ -1520,7 +1520,24 @@
             "\u001b[?25h  Preparing metadata (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
             "Requirement already satisfied: numpy in /usr/local/lib/python3.12/dist-packages (from kiwipiepy) (2.0.2)\n",
             "Requirement already satisfied: tqdm in /usr/local/lib/python3.12/dist-packages (from kiwipiepy) (4.67.1)\n",
-            "Building wheels for collected packages: kiwipiepy, kiwipiepy_model\n"
+            "Building wheels for collected packages: kiwipiepy, kiwipiepy_model\n",
+            "  \u001b[1;31merror\u001b[0m: \u001b[1msubprocess-exited-with-error\u001b[0m\n",
+            "  \n",
+            "  \u001b[31m×\u001b[0m \u001b[32mpython setup.py bdist_wheel\u001b[0m did not run successfully.\n",
+            "  \u001b[31m│\u001b[0m exit code: \u001b[1;36m1\u001b[0m\n",
+            "  \u001b[31m╰─>\u001b[0m See above for output.\n",
+            "  \n",
+            "  \u001b[1;35mnote\u001b[0m: This error originates from a subprocess, and is likely not a problem with pip.\n",
+            "  Building wheel for kiwipiepy (setup.py) ... \u001b[?25lerror\n",
+            "\u001b[31m  ERROR: Failed building wheel for kiwipiepy\u001b[0m\u001b[31m\n",
+            "\u001b[0m\u001b[?25h  Running setup.py clean for kiwipiepy\n",
+            "  Building wheel for kiwipiepy_model (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
+            "  Created wheel for kiwipiepy_model: filename=kiwipiepy_model-0.22.0-py3-none-any.whl size=79625203 sha256=026bbf8f31492a16f0dbd1154f27d1f117e422dd7768d283742e0368dbc91e4f\n",
+            "  Stored in directory: /root/.cache/pip/wheels/e5/4b/3f/aa850a40d0f9709fd4c6d37d48402ca95354264236e1205ea3\n",
+            "Successfully built kiwipiepy_model\n",
+            "Failed to build kiwipiepy\n",
+            "\u001b[31mERROR: ERROR: Failed to build installable wheels for some pyproject.toml based projects (kiwipiepy)\u001b[0m\u001b[31m\n",
+            "\u001b[0m"
           ]
         }
       ],
@@ -1851,11 +1868,39 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {
-        "id": "WygrPK_V_xl5"
+        "id": "WygrPK_V_xl5",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 378
+        },
+        "outputId": "33e8d1aa-d634-47d0-9d16-1987fda11abf"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "ModuleNotFoundError",
+          "evalue": "No module named 'vllm'",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+            "\u001b[0;32m/tmp/ipython-input-3109118205.py\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0mvllm\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mSamplingParams\u001b[0m \u001b[0;31m## SamplingParams 클래스 임포트\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;31m## 샘플링 파라미터 설정\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m sampling_params = SamplingParams(\n\u001b[1;32m      5\u001b[0m     \u001b[0mtemperature\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m0.3\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;31m## 생성 텍스트의 다양성 조절 창의적으로 만들어라 정확하게 해라\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'vllm'",
+            "",
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0;32m\nNOTE: If your import is failing due to a missing package, you can\nmanually install dependencies using either !pip or !apt.\n\nTo view examples of installing some common dependencies, click the\n\"Open Examples\" button below.\n\u001b[0;31m---------------------------------------------------------------------------\u001b[0m\n"
+          ],
+          "errorDetails": {
+            "actions": [
+              {
+                "action": "open_url",
+                "actionText": "Open Examples",
+                "url": "/notebooks/snippets/importing_libraries.ipynb"
+              }
+            ]
+          }
+        }
+      ],
       "source": [
         "from vllm import SamplingParams ## SamplingParams 클래스 임포트\n",
         "\n",
