Colab을 통해 생성됨

--- a/오픈소스_데이터_분석_14강.ipynb
+++ b/오픈소스_데이터_분석_14강.ipynb
@@ -71,11 +71,11 @@
       "metadata": {
         "id": "oRFE0WufwtWm",
         "collapsed": true,
-        "outputId": "828cc452-b77f-4e9c-b6ec-e9ecb88f77b5",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
-        }
+        },
+        "outputId": "828cc452-b77f-4e9c-b6ec-e9ecb88f77b5"
       },
       "execution_count": 1,
       "outputs": [
@@ -307,10 +307,10 @@
       ],
       "metadata": {
         "id": "2PyUVMjnwv4n",
-        "outputId": "213e73bb-84b2-4aa2-b3d8-e7493de9c086",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "213e73bb-84b2-4aa2-b3d8-e7493de9c086"
       },
       "execution_count": 1,
       "outputs": [
@@ -365,7 +365,7 @@
       "metadata": {
         "id": "1Q-jeRwcwzly"
       },
-      "execution_count": 10,
+      "execution_count": 12,
       "outputs": []
     },
     {
@@ -400,6 +400,9 @@
         "import pandas as pd\n",
         "\n",
         "## RSS 데이터는 리치 사이트 서머리로 웹 1.0 시절에 뉴스나 잡지를 보고 싶을 때 그 사이트에 접속해서\n",
+        "## 필요한 기능을 RSS를 갱신하는 것을 말한다.\n",
+        "## XML 포멧으로 돌아오니 그걸 응용해서 실습을 진행한다.\n",
+        "## VML 시각 언어 모델(VLM)은 이미지와 동영상 또는 텍스트를 같이 넣어서 언어적인 설명을 같이 한다.\n",
         "\n",
         "def extract_unique_images(rss_url):\n",
         "    ## 주어진 RSS 피드 URL에서 고유한 이미지 URL들을 추출하는 함수 정의\n",
