Colab을 통해 생성됨

--- a/오픈소스_데이터_분석_15강.ipynb
+++ b/오픈소스_데이터_분석_15강.ipynb
@@ -22,7 +22,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/jaehwachung/Data-Analysis-with-Open-Source/blob/main/%EC%98%A4%ED%94%88%EC%86%8C%EC%8A%A4_%EB%8D%B0%EC%9D%B4%ED%84%B0_%EB%B6%84%EC%84%9D_15%EA%B0%95.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/kamser0415/Data-Analysis-with-Open-Source/blob/main/%EC%98%A4%ED%94%88%EC%86%8C%EC%8A%A4_%EB%8D%B0%EC%9D%B4%ED%84%B0_%EB%B6%84%EC%84%9D_15%EA%B0%95.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -50,7 +50,9 @@
         "  - 단기 주가 예측 모델 학습 및 평가\n",
         "4. GBRT 기반 예측\n",
         "  - 특성 변수 설계 및 예측 모델 학습\n",
-        "  - 예측 기반 투자 전략 및 백테스팅"
+        "  - 예측 기반 투자 전략 및 백테스팅\n",
+        "  \n",
+        "\n"
       ],
       "metadata": {
         "id": "egaDlNK_rHoa"
@@ -66,10 +68,44 @@
         "!rm ~/.cache/matplotlib -rf"
       ],
       "metadata": {
-        "id": "QU9ZCsU5sNts"
+        "id": "QU9ZCsU5sNts",
+        "outputId": "fc998aa2-ad0f-46a3-a8bd-aeb66e74b510",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Reading package lists... Done\n",
+            "Building dependency tree... Done\n",
+            "Reading state information... Done\n",
+            "The following NEW packages will be installed:\n",
+            "  fonts-nanum\n",
+            "0 upgraded, 1 newly installed, 0 to remove and 41 not upgraded.\n",
+            "Need to get 10.3 MB of archives.\n",
+            "After this operation, 34.1 MB of additional disk space will be used.\n",
+            "Get:1 http://archive.ubuntu.com/ubuntu jammy/universe amd64 fonts-nanum all 20200506-1 [10.3 MB]\n",
+            "Fetched 10.3 MB in 0s (27.6 MB/s)\n",
+            "debconf: unable to initialize frontend: Dialog\n",
+            "debconf: (No usable dialog-like program is installed, so the dialog based frontend cannot be used. at /usr/share/perl5/Debconf/FrontEnd/Dialog.pm line 78, <> line 1.)\n",
+            "debconf: falling back to frontend: Readline\n",
+            "debconf: unable to initialize frontend: Readline\n",
+            "debconf: (This frontend requires a controlling tty.)\n",
+            "debconf: falling back to frontend: Teletype\n",
+            "dpkg-preconfigure: unable to re-open stdin: \n",
+            "Selecting previously unselected package fonts-nanum.\n",
+            "(Reading database ... 121713 files and directories currently installed.)\n",
+            "Preparing to unpack .../fonts-nanum_20200506-1_all.deb ...\n",
+            "Unpacking fonts-nanum (20200506-1) ...\n",
+            "Setting up fonts-nanum (20200506-1) ...\n",
+            "Processing triggers for fontconfig (2.13.1-4.2ubuntu5) ...\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -91,7 +127,7 @@
       "metadata": {
         "id": "As0gBP7BsPxj"
       },
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -121,16 +157,18 @@
       "outputs": [],
       "source": [
         "# yfinance 임포트\n",
+        "import yfinance as yf\n",
         "import datetime\n",
         "\n",
-        "symbol = 'S&P500'\n",
-        "ticker = '^GSPC'\n",
+        "symbol = 'S&P500' ##\n",
+        "ticker = '^GSPC' ## yfinance로\n",
         "\n",
         "## 데이터 수집 날짜 설정 (2014년 1월 1일) ~ (2019년 12월 31일)\n",
         "start_date = datetime.datetime(2014, 1, 1)\n",
         "end_date = datetime.datetime(2019, 12, 31)\n",
         "\n",
         "## yfinance를 사용하여 S&P 500 (^GSPC) 데이터를 지정된 기간 동안 다운로드\n",
+        "df = yf.download(ticker, start=start_date, end=end_date)\n",
         "\n",
         "## MultiIndex 컬럼에서 두 번째 레벨(보통 'Adj Close' 등)을 제거하여 컬럼 이름을 단순화\n",
         "df.columns = df.columns.droplevel(1)\n",
